--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -46,29 +46,29 @@ services:
  receiver:
   image: receiver
   ports:
-    - “8080:8080”
+    - '8080:8080'
   depends_on:
-    - “kafka"
+    - 'kafka'
  storage:
   image: storage
   ports:
-    - “8090:8090”
+    - '8090:8090'
   depends_on:
-    - “kafka"
-    - "db"
+    - 'kafka'
+    - 'db'
  processing:
   image: processing
   network_mode: host
   ports:
-    - “8100:8100”
+    - '8100:8100'
   depends_on:
-    - storage"
+    - 'storage'
  audit_log:
   image: audit_log
   ports:
-    - “8110:8110”
+    - '8110:8110'
   depends_on:
-    - “kafka"
+    - 'kafka'
 # Names our volume
 volumes:
  my-db:
