--- a/receiver/app_conf.yml
+++ b/receiver/app_conf.yml
@@ -7,3 +7,5 @@ events:
   hostname: acit3855jeremy.eastus2.cloudapp.azure.com
   port: 9092
   topic: events
+  max_retry_count: 10
+  sleep_time: 10
