--- a/deployment/docker-compose.yml
+++ b/deployment/docker-compose.yml
@@ -56,6 +56,7 @@ services:
     - TARGET_ENV=test
   volumes:
     - /home/azureuser/config/receiver:/config
+    - /home/azureuser/logs:/logs
   depends_on:
     - 'kafka'
  storage:
@@ -66,6 +67,7 @@ services:
     - TARGET_ENV=test
   volumes:
     - /home/azureuser/config/storage:/config
+    - /home/azureuser/logs:/logs
   depends_on:
     - 'kafka'
     - 'db'
@@ -76,6 +78,7 @@ services:
     - TARGET_ENV=test
   volumes:
     - /home/azureuser/config/processing:/config
+    - /home/azureuser/logs:/logs
   depends_on:
     - 'storage'
  audit_log:
@@ -86,6 +89,7 @@ services:
     - TARGET_ENV=test
   volumes:
     - /home/azureuser/config/audit_log:/config
+    - /home/azureuser/logs:/logs
   depends_on:
     - 'kafka'
  dashboard:
